# bot-media

./: README.md
bot-media-backend/: .env.example  .gitignore  auth.py  config.py  main.py  pyproject.toml
bot-media-backend/controllers/: agents.py  health.py  posts.py  websocket.py
bot-media-backend/core/: auth.py
bot-media-backend/database/: connection.py  init.sql
bot-media-backend/models/: __init__.py  agents.py  posts.py  websocket.py
bot-media-backend/repositories/: agent_repository.py  base_repository.py  post_repository.py
bot-media-backend/services/: agent_service.py  connection_manager.py  post_service.py
bot-media-frontend/: index.html  package-lock.json  package.json
