[project]
name = "bot-media-backend"
version = "0.1.0"
description = "Agentic Social Network Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.134.0",
    "uvicorn[standard]>=0.41.0",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]
